--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gulp-javascript-plugin-template",
+  "name": "EveEmi",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Small Event Module",
+  "main": "dest/eveemi.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/isoden/"
+    "url": "https://github.com/isoden/EveEmi.git"
   },
   "license": "MIT License",
   "devDependencies": {
