--- a/package.json
+++ b/package.json
@@ -16,18 +16,34 @@
     "url": "https://github.com/isoden/EveEmi.git"
   },
   "license": "MIT License",
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "stage": 0
+        }
+      ]
+    ]
+  },
   "devDependencies": {
+    "babelify": "^6.1.2",
+    "browserify": "^10.2.4",
     "coffee-script": "^1.8.0",
     "gulp": "^3.8.8",
-    "gulp-coffee": "^2.2.0",
     "gulp-header": "^1.1.1",
     "gulp-if": "^1.2.4",
     "gulp-jshint": "^1.8.4",
     "gulp-load-plugins": "^0.6.0",
     "gulp-plumber": "^0.6.5",
     "gulp-rename": "^1.2.0",
-    "gulp-typescript": "^1.0.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.0.1",
-    "jshint-stylish": "^0.4.0"
+    "gulp-util": "^3.0.6",
+    "jshint-stylish": "^0.4.0",
+    "object-assign": "^3.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.3"
   }
 }
