--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "devDependencies": {
+    "babel": "^5.6.4",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "coffee-script": "^1.8.0",
