test taskとeslint taskを追加した

--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   },
   "devDependencies": {
     "babel": "^5.6.4",
+    "babel-eslint": "^3.1.18",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
-    "coffee-script": "^1.8.0",
+    "del": "^1.2.0",
     "gulp": "^3.8.8",
+    "gulp-eslint": "^0.14.0",
     "gulp-espower": "^0.10.1",
     "gulp-header": "^1.1.1",
-    "gulp-if": "^1.2.4",
-    "gulp-jshint": "^1.8.4",
     "gulp-load-plugins": "^0.6.0",
     "gulp-mocha": "^2.1.2",
     "gulp-plumber": "^0.6.5",
@@ -43,9 +43,10 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.6",
-    "jshint-stylish": "^0.4.0",
+    "gulp-watch": "^4.2.4",
     "object-assign": "^3.0.0",
     "power-assert": "^0.11.0",
+    "run-sequence": "^1.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.3"
