--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@isoden/EveEmi",
+  "name": "@isoden/eveemi",
   "version": "1.1.0",
   "description": "Small Event Module",
   "main": "dest/eveemi.js",
