--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@isoden/eveemi",
   "version": "1.1.2",
-  "description": "Small Event Module",
+  "description": "Tiny Event Module",
   "main": "dest/eveemi.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp",
+    "build": "gulp build",
+    "test": "gulp test"
   },
   "author": {
     "name": "YU ISODA",
