--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@isoden/eveemi",
+  "name": "@isoden/eveemi-compat",
   "version": "1.1.2",
   "description": "Tiny Event Module",
-  "main": "dest/eveemi.js",
+  "main": "dest/eveemi-compat.js",
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
@@ -23,7 +23,8 @@
       [
         "babelify",
         {
-          "stage": 0
+          "stage": 0,
+          "loose": "all"
         }
       ]
     ]
