--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "^3.1.18",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
+    "chai": "^3.0.0",
     "del": "^1.2.0",
     "gulp": "^3.8.8",
     "gulp-eslint": "^0.14.0",
@@ -46,11 +47,33 @@
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
+    "mocha": "^2.2.5",
     "object-assign": "^3.0.0",
     "power-assert": "^0.11.0",
     "run-sequence": "^1.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.3"
+  },
+  "testling": {
+    "browsers": {
+      "ie": [
+        8,
+        9,
+        10
+      ],
+      "ff": [
+        37,
+        38,
+        39
+      ],
+      "chrome": [
+        41,
+        42,
+        43
+      ]
+    },
+    "barness": "mocha",
+    "files": "test/*.js"
   }
 }
