--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@isoden/eveemi",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Tiny Event Module",
   "main": "dest/eveemi.js",
   "scripts": {
@@ -18,30 +18,17 @@
     "url": "https://github.com/isoden/EveEmi.git"
   },
   "license": "MIT",
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "stage": 0
-        }
-      ]
-    ]
-  },
   "devDependencies": {
     "babel": "^5.6.4",
-    "babel-eslint": "^3.1.18",
-    "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
     "del": "^1.2.0",
     "gulp": "^3.8.8",
-    "gulp-eslint": "^0.14.0",
     "gulp-espower": "^0.10.1",
     "gulp-header": "^1.1.1",
     "gulp-load-plugins": "^0.6.0",
     "gulp-mocha": "^2.1.2",
-    "gulp-plumber": "^0.6.5",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.0.1",
@@ -51,6 +38,7 @@
     "object-assign": "^3.0.0",
     "power-assert": "^0.11.0",
     "run-sequence": "^1.1.1",
+    "tsify": "^0.11.10",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.3",
